Part1/ex1.08/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-server-html-v3-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express-server-html-v3
  template:
    metadata:
      labels:
        app: express-server-html-v3
    spec:
      containers:
        - name: express-server-html-v3
          image: jannek100/devopskubex106:latest
