Part1/ex1.08/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-server-html-v3-svc
spec:
  type: ClusterIP
  selector:
    app: express-server-html-v3
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
